--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
         <div id="aside">
             <p id="pTotal"></p>
             <p id="pCantidad"></p>
-            <p id="pColor"></p>
-            <div id="divColor"></div>
+            <div id="divColorCarrito">
+                <p id="pColor"></p>
+                <div id="divColor"></div>
+            </div>
         </div>
     </main>
 
