--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <button id="button">Calcular Total</button>
         </div>
         <div id="aside">
+            <img id="xIco" src="assets/img/xIco.svg" alt="">
             <p id="pTotal"></p>
             <p id="pCantidad"></p>
             <div id="divColorCarrito">
